Fixed preformatted code (+6 squashed commit)
Squashed commit:

[d6ffbc0] Added `jekyll-short-url-generator`

[aff7e78] Added `github` redirect

[a58f877] Added "stay" option

[1c114d4] Added support for redirects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ a:hover, a:active {
 	margin: 16px 25px;
 }
 
-.post pre, .post blockquote+p {
+.post blockquote+p {
 	white-space: pre-line;
 }
 
